kubernetes/base/basket-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-api
spec:
  selector:
    matchLabels:
      app: basket-api
  template:
    metadata:
      labels:
        app: basket-api
    spec:
      containers:
      - name: basket-api
        image: microservice_demo/basket-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80 
        resources:
          requests:
            memory: "128Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: basket-api
spec:
  type: ClusterIP
  selector:
    app: basket-api
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 80
