kubernetes/base/identity-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
spec:
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      containers:
      - name: identity-api
        image: microservice_demo/identity-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: identity-api
spec:
  type: ClusterIP
  selector:
    app: identity-api
  ports:
  - protocol: TCP
    port: 5004
    targetPort: 80
