kubernetes/base/sqlserver.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: sqlserver
  namespace: microservice-architecture-demo
spec:
  selector:
    matchLabels:
      app: sqlserver
  replicas: 1
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: "./data:/var/opt/mssql/data"
          name: sqldata-storage
      volumes:
      - name: sqldata-storage
        persistentVolumeClaim:
          claimName: sqlserver-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: microservice-architecture-demo
spec:
  selector:
    app: sqlserver
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
