kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - secretName: ingress-tls-secret
    hosts: 
    - "microservice-demo.com"
  rules:
  - host: microservice-demo.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /identity-api/(.*)
        pathType: Prefix
        backend:
          service:
            name: identity-api
            port:
              number: 80
      - path: /order-api/(.*)
        pathType: Prefix
        backend:
          service:
            name: order-api
            port:
              number: 80
